feat: correcoes de requisicoes do backend

--- a/crud-empresa-fornecedores/src/main/resources/application.properties
+++ b/crud-empresa-fornecedores/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+spring.mvc.throw-exception-if-no-handler-found=true
+
+# Configurações do PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/cadastro_emp_forn
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Opções adicionais (opcional)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
