--- a/crud-empresa-fornecedores/pom.xml
+++ b/crud-empresa-fornecedores/pom.xml
@@ -78,6 +78,14 @@
 		</dependency>
 
 		<!--dependencias do	swagger(fim)-->
+
+		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>8.0.1.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
